...
        <item quantity="other">%d files</item>
    </plurals>
    <string name="dialog_media_document">Document</string>
    <string name="dialog_media_link">Link</string>
    <string name="dialog_media_checklist">Checklist</string>
    <string name="dialog_media_poll">Poll</string>
    <string name="dialog_media_location">Location</string>
    <string name="dialog_media_contact">Contact</string>
    <string name="dialog_media_dice">Dice</string>
    <string name="dialog_unsupported_message">This message type isn’t supported yet</string>
    <plurals name="dialog_poll_voters">
        <item quantity="one">%d vote</item>
        <item quantity="other">%d votes</item>
...
    <string name="dialog_location_live">Live location</string>
    <string name="dialog_checklist_add">Add task</string>
    <string name="dialog_checklist_add_hint">Task</string>
    <string name="dialog_checklist_add_action">Add</string>
    <string name="dialog_location_action">Location</string>
    <string name="dialog_location_pick_title">Location</string>
    <string name="dialog_location_locating">Finding your location…</string>
    <string name="dialog_location_send_this">Send this location</string>
    <string name="dialog_location_unavailable">Location is unavailable right now</string>
    <string name="dialog_location_open_maps">Open in maps</string>
    <string name="dialog_location_route">Build route</string>
    <string name="dialog_location_no_maps">No map apps installed</string>
    <string name="dialog_location_permission_needed">Allow location access to send your position</string>
    <string name="dialog_location_marker">Location marker</string>
...
    <string name="dialog_media_close_viewer">Close photo</string>
    <string name="dialog_search">Search in chat</string>
    <string name="dialog_search_clear">Clear search</string>
    <string name="dialog_search_close">Close search</string>
    <string name="dialog_jump_date">Jump to date</string>
    <string name="dialog_jump_confirm">Jump</string>
    <string name="dialog_jump_cancel">Cancel</string>
    <string name="dialog_message_hint">Message</string>
    <string name="dialog_send">Send</string>
    <string name="dialog_attach">Attach</string>
    <string name="dialog_attach_gallery">Gallery</string>
    <string name="dialog_attach_photo">Photo</string>
    <string name="dialog_attach_video">Video</string>
...
